src/objects/WF_Archived_Project__c.object
<CustomObject>
    <fields>
        <fullName>Line_Item_ID__c</fullName>
        <label>Line Item ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>WF_Project_Archives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Process_Done__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to remove the record once Project Archived</description>
        <label>Process Done</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WF_Project_Id__c</fullName>
        <label>WF Project ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WF_Project_Link__c</fullName>
        <formula>HYPERLINK(&quot;https://hanleywood.my.workfront.com/project/view?ID=&quot; +  WF_Project_Id__c  , &quot;WF Project&quot;,&quot;_blank&quot;)</formula>
        <label>WF Project Link</label>
        <type>Text</type>
    </fields>
    <label>WF Archived Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Line_Item_ID__c</columns>
        <columns>WF_Project_Id__c</columns>
        <columns>WF_Project_Link__c</columns>
        <columns>Process_Done__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Incomplete</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Line_Item_ID__c</columns>
        <columns>WF_Project_Id__c</columns>
        <columns>WF_Project_Link__c</columns>
        <columns>Process_Done__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Process_Done__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Incomplete</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PA-{00000}</displayFormat>
        <label>WF Project Archive Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WF Archived Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>